modificando index, no se ven las imagenes

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               <img
                 src="assets/img/portfolio/setmate/setmate-3.jpg"
                 class="img-fluid"
-                alt=""
+                alt="Imagen Setmate"
               />
               <div class="portfolio-info">
                 <h4>Porta Mate y Yerbera</h4>
