Modifica tel y mail

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <section id="topbar" class="d-flex align-items-center">
       <div class="container d-flex justify-content-end">
         <div class="social-links d-none d-md-flex align-items-center fs-5">
-          <a href="https://wa.me/5493513053482?text=" target="_blank"><i class="bi bi-whatsapp"></i></a>
-          <a href="mailto:celacba@gmail.com?subject=Consulta de Servicios" target="_blank"><i class="bi bi-envelope"></i></a>
+          <a href="https://wa.me/5493512019270?text=" target="_blank"><i class="bi bi-whatsapp"></i></a>
+          <a href="mailto:decoideas.mariela@gmail.com?subject=Consulta de Servicios" target="_blank"><i class="bi bi-envelope"></i></a>
           <a href="https://www.facebook.com/decoideasmariela" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
           <a href="https://www.instagram.com/decoideasmariela/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
         </div>
@@ -1624,14 +1624,14 @@
 
             <div class="col-lg-3 col-md-6">
               <div class="info-box mb-4">
-                <a href="mailto:celacba@gmail.com?subject=Consulta de Servicios" target="_blank"><i class="bx bx-envelope"></i></a>
+                <a href="mailto:decoideas.mariela@gmail.com?subject=Consulta de Servicios" target="_blank"><i class="bx bx-envelope"></i></a>
                 <h3>Envianos un Correo</h3>
               </div>
             </div>
 
             <div class="col-lg-3 col-md-6">
               <div class="info-box mb-4">
-                <a href="https://wa.me/5493513053482?text=" target="_blank"><i class="bx bxl-whatsapp"></i></a>
+                <a href="https://wa.me/5493512019270?text=" target="_blank"><i class="bx bxl-whatsapp"></i></a>
                 <h3>Envianos un Mensaje</h3>
               </div>
             </div>
