--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="container d-flex justify-content-end">
         <div class="social-links d-none d-md-flex align-items-center fs-5">
           <a href="https://wa.me/5493512019270?text=" target="_blank"><i class="bi bi-whatsapp"></i></a>
-          <a href="mailto:decoideas.mariela@gmail.com?subject=Consulta de Servicios" target="_blank"><i class="bi bi-envelope"></i></a>
+          <a href="mailto:decoideas.mariela@gmail.com?subject=Consulta para DecoIdeas" target="_blank"><i class="bi bi-envelope"></i></a>
           <a href="https://www.facebook.com/decoideasmariela" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
           <a href="https://www.instagram.com/decoideasmariela/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
         </div>
@@ -1624,7 +1624,7 @@
 
             <div class="col-lg-3 col-md-6">
               <div class="info-box mb-4">
-                <a href="mailto:decoideas.mariela@gmail.com?subject=Consulta de Servicios" target="_blank"><i class="bx bx-envelope"></i></a>
+                <a href="mailto:decoideas.mariela@gmail.com?subject=Consulta para DecoIdeas" target="_blank"><i class="bx bx-envelope"></i></a>
                 <h3>Envianos un Correo</h3>
               </div>
             </div>
