--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
                   href="assets/img/portfolio/bolsos/bolso-1.jpg"
                   data-gallery="portfolioGallery"
                   class="portfolio-lightbox preview-link"
-                  title="Web 3"
+                  title="Bolso Matero"
                   ><i class='bx bxs-camera-plus'></i></a>
                 <!-- <a
                   href="portfolio-details.html"
@@ -781,7 +781,7 @@
                   href="assets/img/portfolio/bolsos/bolso-3.jpg"
                   data-gallery="portfolioGallery"
                   class="portfolio-lightbox preview-link"
-                  title="Web 3"
+                  title="Bolso Matero Matelasse canelón"
                   ><i class='bx bxs-camera-plus'></i></a>
                 <!-- <a
                   href="portfolio-details.html"
@@ -804,7 +804,7 @@
                   href="assets/img/portfolio/bolsos/bolso-4.jpg"
                   data-gallery="portfolioGallery"
                   class="portfolio-lightbox preview-link"
-                  title="Web 3"
+                  title="Bolso de Playa Impermeable."
                   ><i class='bx bxs-camera-plus'></i></a>
                 <!-- <a
                   href="portfolio-details.html"
@@ -825,12 +825,12 @@
               />
               <div class="portfolio-info">
                 <h4>Bolso</h4>
-                <p>WeBolso Negrob</p>
+                <p>Bolso Negro</p>
                 <a
                   href="assets/img/portfolio/manteles/mantel-3.jpg"
                   data-gallery="portfolioGallery"
                   class="portfolio-lightbox preview-link"
-                  title="Web 3"
+                  title="Bolso Negro"
                   ><i class='bx bxs-camera-plus'></i></a>
                 <!-- <a
                   href="portfolio-details.html"
@@ -853,7 +853,7 @@
                   href="assets/img/portfolio/manteles/mantel-2.jpg"
                   data-gallery="portfolioGallery"
                   class="portfolio-lightbox preview-link"
-                  title="Web 3"
+                  title="Repasador"
                   ><i class='bx bxs-camera-plus'></i></a>
                 <!-- <a
                   href="portfolio-details.html"
@@ -876,7 +876,7 @@
                   href="assets/img/portfolio/manteles/mantel-4.jpg"
                   data-gallery="portfolioGallery"
                   class="portfolio-lightbox preview-link"
-                  title="Web 3"
+                  title="Individuales y panera."
                   ><i class='bx bxs-camera-plus'></i></a>
                 <!-- <a
                   href="portfolio-details.html"
