Modifica texto ppal

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center" data-aos="fade-up">
             <div>
               <h1>Bienvenidos a <span>DECOIDEAS</span></h1>
-              <h2>Soy una emprendedora independiente apasionada por transformar ideas en realidad. Como emprendedora independiente, disfruto del proceso de construir y hacer crecer cada proyecto."</h2>
+              <h2>Soy Mariela, emprendedora apasionada por las manualidades, siempre he disfrutado del proceso de construir y crear con mis manos cada objeto, es una forma maravillosa de expresarse creativamente, relajarse y divertirse."</h2>
               <div class="d-flex">
                 <a href="#portfolio" class="btn-get-started scrollto">Mis trabajos</a>
               </div>
