--- a/index.html
+++ b/index.html
@@ -1730,7 +1730,7 @@
           &copy; Copyright <strong><span>Plano Software</span></strong
           >. All Rights Reserved
         </div>
-        <div class="credits">Diseñado por <a href="https://guillesalinas.github.io/PlanoSoftware/" target="_blank">Plano Software</a></div>
+        <div class="credits">Diseñado por <a href="https://guillesalinas.github.io/PlanoSoftware.github.io/" target="_blank">Plano Software</a></div>
       </div>
     </footer>
     <!-- End Footer -->
